--- a/ArqSoftware.CRUD/ArqSoftware.CRUD.Web/Views/Home/Index.cshtml
+++ b/ArqSoftware.CRUD/ArqSoftware.CRUD.Web/Views/Home/Index.cshtml
@@ -2,7 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="col-md-8 offset-2">
+    <div class="card" style="width: 50rem;">
+        <div class="card-header text-center">
+            Administración Clientes
+        </div>
+        <div class="card-body">
+            <p class="card-title">
+                Trabajo desarrollado por:
+            </p>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Karen Lorena Molano Arias</li>
+                <li class="list-group-item">Lucas Arenas Arteaga </li>
+            </ul>
+            <br />
+            <p class="card-text">
+                Para la materia <span class="fw-bold">Arquitectura de software</span>
+            </p>
+        </div>
+
+    </div>
 </div>
+
