--- a/ArqSoftware.CRUD/ArqSoftware.CRUD.Web/Views/Client/Index.cshtml
+++ b/ArqSoftware.CRUD/ArqSoftware.CRUD.Web/Views/Client/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nuevo</a>
 </p>
 <table class="table">
     <thead>
@@ -49,9 +49,8 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Editar", "Edit", new {  id=item.Id  }) |}
+                @Html.ActionLink("Eliminar", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
