--- a/ArqSoftware.CRUD/ArqSoftware.CRUD.Web/Views/Client/Index.cshtml
+++ b/ArqSoftware.CRUD/ArqSoftware.CRUD.Web/Views/Client/Index.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Editar", "Edit", new {  id=item.Id  }) |}
+                @Html.ActionLink("Editar", "Edit", new {  id=item.Id  }) |
                 @Html.ActionLink("Eliminar", "Delete", new { id=item.Id })
             </td>
         </tr>
